# sd-board

./: .gitignore  API_REFERENCE.md  Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  scratch_db.py  test.json
src/: config.py  main.py
src/services/: data_fetcher.py  dialogue_generator.py  storyboard_builder.py
