[project]
name = "sd-board"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.4",
    "fastapi>=0.136.1",
    "google-genai>=1.75.0",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "supabase>=2.29.0",
    "uvicorn>=0.46.0",
]
